# random-walk

./: CMakeLists.txt  README.md
client/headers/: client.h  client_net.h  menu.h  render.h
client/src/: client.c  client_net.c  menu.c  render.c
common/: config.h  protocol.h  protocol_io.c  protocol_io.h
documentation/: pouzivatelska_prirucka.md  technicka_dokumentacia.md
notes/: HOW_IT_WORKS.md  PROTOCOL.md  check_point_sumUp_No1.md  check_point_sumUp_No2.md  check_points_p1_p11.md
server/headers/: server.h  server_net.h  simulation.h  world.h
server/src/: server.c  server_net.c  simulation.c  world.c
